--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Counter Example Spr21</string>
+    <string name="my_counter_app">My Counter App</string>
+    <string name="plus_one">+1</string>
 </resources>
